--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -20,25 +20,23 @@
     </ul>
     <p>Total Items: {{ totalItems }}</p>
     <p>Total Price: ${{ totalPrice }}</p>
-  </div> -->
+  </div>
 
-  <div class="cart">
-    <h2>Cart</h2>
-    <div class="card-container">
-      <mat-card *ngFor="let item of cartItems" class="cart-card">
-        <img mat-card-image [src]="item.imageUrl" alt="{{ item.name }}">
-        <mat-card-content>
-          <p><strong>{{ item.name }}</strong></p>
-          <p>Description: {{ item.description }}</p>
-          <p>Price: ${{ item.price }}</p>
-          <p>Quantity: {{ item.quantity }}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button (click)="increaseQuantity(item)">+</button>
-          <button mat-button (click)="decreaseQuantity(item)">-</button>
-        </mat-card-actions>
-      </mat-card>
+   -->
+
+   <div class="cart">
+    <div *ngFor="let item of cartItems" class="card">
+      <img class="card-img-top" [src]="item.imageUrl" alt="Product Image">
+      <div class="card-body">
+        <h5 class="card-title">{{ item.name }}</h5>
+        <p class="card-text">{{ item.description }}</p>
+        <p class="card-text">Price: ${{ item.price }}</p>
+        <p class="card-text">Quantity: {{ item.quantity }}</p>
+        <button (click)="increaseQuantity(item)" class="btn btn-primary">+</button>
+        <button (click)="decreaseQuantity(item)" class="btn btn-primary">-</button>
+      </div>
     </div>
     <p>Total Items: {{ totalItems }}</p>
     <p>Total Price: ${{ totalPrice }}</p>
   </div>
+  
