--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div>
-  <h2>home</h2>
+<div class="py-5 text-center">
+  <h2>Welcome to Our Store</h2>
 </div>
 <div class="container">
   <br>
@@ -10,3 +10,5 @@
       </div>
     </div>
   </div>
+  
+  
