--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -13,6 +10,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart">Cart</a>
+        </li>
+        <li class="nav-item" *ngIf="!flag()">
+          <a class="nav-link" routerLink="/signup">Sign up</a>
         </li>
       </ul>
     </div>
