added logout function

--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -5,6 +5,6 @@
     <p class="card-text">{{ product.description }}</p>
     <p class="card-text">Price: ${{ product.price }}</p>
     
-    <button (click)="addToCart(product.id)">Add to Cart</button>
+    <button class="btn btn-primary" (click)="addToCart(product.id)">Add to Cart</button>
   </div>
 </div>
