--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/home">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!flag()">
           <a class="nav-link" routerLink="/login">Sign in</a>
         </li>
         <li class="nav-item">
@@ -13,6 +13,9 @@
         </li>
         <li class="nav-item" *ngIf="!flag()">
           <a class="nav-link" routerLink="/signup">Sign up</a>
+        </li>
+        <li class="nav-item" *ngIf="flag3()">
+          <a class="nav-link" routerLink="/home">Logout</a>
         </li>
       </ul>
     </div>
