--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,15 +5,21 @@
       <form>
         <div class="form-group">
           <label for="username">Username:</label>
-          <input type="text" class="form-control" id="username" [(ngModel)]="username" name="username" required>
+          <input type="text" class="form-control" id="username" [(ngModel)]="username" name="username" #usernameField="ngModel" required>
+          <div *ngIf="usernameField.invalid && (usernameField.dirty || usernameField.touched)" class="alert alert-danger">
+            <div *ngIf="usernameField.errors.required">Username is required.</div>
+          </div>
         </div>
         <div class="form-group">
           <label for="password">Password:</label>
-          <input type="password" class="form-control" id="password" [(ngModel)]="password" name="password" required>
+          <input type="password" class="form-control" id="password" [(ngModel)]="password" name="password" #passwordField="ngModel" required>
+          <div *ngIf="passwordField.invalid && (passwordField.dirty || passwordField.touched)" class="alert alert-danger">
+            <div *ngIf="passwordField.errors.required">Password is required.</div>
+          </div>
         </div>
         <div class="alert alert-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
         <div class="text-center">
-          <button class="btn btn-primary" (click)="login()">Login</button>
+          <button class="btn btn-primary" (click)="login()" [disabled]="!usernameField.valid || !passwordField.valid">Login</button>
         </div>
       </form>
     </div>
